@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.6.1 (pending)
 ==========================
 
+- Additional error handling when RemoteServer fails to launch process
 - Added support for PothosUtil to query information about loaded modules
 - Fix for potential overrun in Block Description if the line is empty.
 
